--- a/source/Directory.Build.props
+++ b/source/Directory.Build.props
@@ -4,30 +4,25 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IsPackable>true</IsPackable>
 
+    <ErrorLog>obj/$(MSBuildProjectName).sarif</ErrorLog>
+
     <!-- 
     put the package output into a nuget test folder 
     -->
     <PackageOutputPath>../../output</PackageOutputPath>
-
-    <VersionPrefix>1.8.1</VersionPrefix>
-    <!--
-    VersionSuffix - For debugging and local nuget feed 
-    -->        
-    <VersionSuffix>alpha-$([System.DateTime]::Now.ToString('yyyyMMddHHmm'))</VersionSuffix>
-    <PackageVersion>$(Version)</PackageVersion>
 
     <Owners>HolisticWare, moljac</Owners>
     <Authors>HolisticWare, moljac</Authors>
     <Copyright>2025</Copyright>
     <license>LICENSE</license>
     <ProjectUrl>
-        https://github.com/HolisticWare/HolisticWare.Core.Graphics.DebuggerVisualizer
+        https://github.com/HolisticWare-Bindings/HolisticWare.Google.AutoValue
     </ProjectUrl>
     <PackageProjectUrl>
-        https://github.com/HolisticWare/HolisticWare.Core.Graphics.DebuggerVisualizer
+        https://github.com/HolisticWare-Bindings/HolisticWare.Google.AutoValue
     </PackageProjectUrl>
     <RepositoryUrl>
-        https://github.com/HolisticWare/HolisticWare.Core.Graphics.DebuggerVisualizer
+        https://github.com/HolisticWare-Bindings/HolisticWare.Google.AutoValue
     </RepositoryUrl>
     <iconUrl>
         https://secure.gravatar.com/avatar/b662959e712466f393541935b664d3c5
