--- a/source/HolisticWare.Google.AutoValue/HolisticWare.Google.AutoValue.csproj
+++ b/source/HolisticWare.Google.AutoValue/HolisticWare.Google.AutoValue.csproj
@@ -13,6 +13,14 @@
       NOTE: you can simply add .aar or .jar files in this directory to be included in the project.
       To learn more, see: https://learn.microsoft.com/dotnet/maui/migration/android-binding-projects
     -->
-    <PackOnBuild>true</PackOnBuild>
   </PropertyGroup>
+  <PropertyGroup>
+    <VersionPrefix>1.10.4</VersionPrefix>
+    <!--
+    VersionSuffix - For debugging and local nuget feed 
+    <VersionSuffix>alpha-$([System.DateTime]::Now.ToString('yyyyMMddHHmm'))</VersionSuffix>
+    -->        
+    <PackageVersion>$(Version)</PackageVersion>
+  </PropertyGroup>
+  
 </Project>
